Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -382,16 +382,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (575758821.py, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [51]\u001b[0;36m\u001b[0m\n\u001b[0;31m    except ModificationFailed e:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'Id' is internal.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Error while writing to the Wikibase instance\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
+      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
+      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
+      "    raise ModificationFailed(json_data['error'])\n",
+      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'\n",
+      "ERROR:root:Error while writing to the Wikibase instance\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
+      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
+      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
+      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
+      "    raise ModificationFailed(json_data['error'])\n",
+      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P5|P5]] already has label \"Category\" associated with language code en.'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Property 'Id' already exists\n",
+      "Column 'Category' is internal.\n",
+      "Property 'Category' already exists\n"
      ]
     }
    ],
@@ -421,7 +453,8 @@
     "                raise Exception(\"Surprise, this method didn't work.\")\n",
     "        \n",
     "        except ModificationFailed as e:\n",
-    "            print(\"Property '{}' already exists\".format(__col_name))\n"
+    "            print(\"Property '{}' already exists\".format(__col_name))\n",
+    "            pass\n"
    ]
   },
   {
