--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -382,17 +382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column 'Id' is internal.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -405,7 +398,22 @@
       "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
       "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
       "    raise ModificationFailed(json_data['error'])\n",
-      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'\n",
+      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column 'Id' is internal.\n",
+      "Property 'Id' already exists\n",
+      "Column 'Category' is internal.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "ERROR:root:Error while writing to the Wikibase instance\n",
       "Traceback (most recent call last):\n",
       "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
@@ -421,8 +429,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Property 'Id' already exists\n",
-      "Column 'Category' is internal.\n",
       "Property 'Category' already exists\n"
      ]
     }
@@ -454,7 +460,8 @@
     "        \n",
     "        except ModificationFailed as e:\n",
     "            print(\"Property '{}' already exists\".format(__col_name))\n",
-    "            pass\n"
+    "            pass\n",
+    "print(\"Col\")"
    ]
   },
   {
