--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Property 'Category' already exists\n"
+      "Property 'Category' already exists\n",
+      "Col\n"
      ]
     }
    ],
@@ -460,7 +461,8 @@
     "        \n",
     "        except ModificationFailed as e:\n",
     "            print(\"Property '{}' already exists\".format(__col_name))\n",
-    "            pass\n",
+    "            continue\n",
+    "\n",
     "print(\"Col\")"
    ]
   },
