--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -462,8 +462,8 @@
     "        except ModificationFailed as e:\n",
     "            print(\"Property '{}' already exists\".format(__col_name))\n",
     "            continue\n",
-    "\n",
-    "print(\"Col\")"
+    "    else:\n",
+    "        "
    ]
   },
   {
