--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -382,55 +382,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Error while writing to the Wikibase instance\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
-      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
-      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
-      "    raise ModificationFailed(json_data['error'])\n",
-      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P4|P4]] already has label \"Id\" associated with language code en.'\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Column 'Id' is internal.\n",
-      "Property 'Id' already exists\n",
-      "Column 'Category' is internal.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Error while writing to the Wikibase instance\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/entities/baseentity.py\", line 255, in _write\n",
-      "    json_result: dict = mediawiki_api_call_helper(data=payload, login=login, allow_anonymous=allow_anonymous, is_bot=is_bot, **kwargs)\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 211, in mediawiki_api_call_helper\n",
-      "    return mediawiki_api_call('POST', mediawiki_api_url=mediawiki_api_url, session=session, data=data, headers=headers, max_retries=max_retries, retry_after=retry_after, **kwargs)\n",
-      "  File \"/root/anaconda3/envs/wikibase/lib/python3.10/site-packages/wikibaseintegrator/wbi_helpers.py\", line 122, in mediawiki_api_call\n",
-      "    raise ModificationFailed(json_data['error'])\n",
-      "wikibaseintegrator.wbi_exceptions.ModificationFailed: 'Property [[Property:P5|P5]] already has label \"Category\" associated with language code en.'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Property 'Category' already exists\n",
-      "Col\n"
+      "P15\n",
+      "Column 'Category' is internal.\n",
+      "P16\n"
      ]
     }
    ],
@@ -461,9 +424,7 @@
     "        \n",
     "        except ModificationFailed as e:\n",
     "            print(\"Property '{}' already exists\".format(__col_name))\n",
-    "            continue\n",
-    "    else:\n",
-    "        "
+    "            continue"
    ]
   },
   {
