Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -404,6 +404,7 @@
     "    __type = item['type']\n",
     "    __mapping_code = item['mapping_code']\n",
     "    __description = item['description']\n",
+    "    __alias = item['alias']\n",
     "\n",
     "    if __type == 'internal':\n",
     "        print(\"Column '{}' is internal.\".format(__col_name))\n",
@@ -412,6 +413,7 @@
     "\n",
     "            p = wbi.property.new(datatype=__data_type)\n",
     "            p.labels.set('en', __col_name)\n",
+    "            p.descriptions.set('en', __description)\n",
     "            p.descriptions.set('en', __description)\n",
     "\n",
     "            res = p.write()\n",
