Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "id": "f06af458",
    "metadata": {},
    "outputs": [
@@ -271,6 +271,7 @@
        "      <th>type</th>\n",
        "      <th>mapping_code</th>\n",
        "      <th>description</th>\n",
+       "      <th>alias</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -281,6 +282,7 @@
        "      <td>internal</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Unique identifier for a SEMBU team member</td>\n",
+       "      <td>ID</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -289,6 +291,7 @@
        "      <td>external</td>\n",
        "      <td>P735</td>\n",
        "      <td>First name/given name of SEMBU team member</td>\n",
+       "      <td>First name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -297,6 +300,7 @@
        "      <td>external</td>\n",
        "      <td>P734</td>\n",
        "      <td>Surname/Family name of SEMBU team member</td>\n",
+       "      <td>Last name</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -305,6 +309,7 @@
        "      <td>external</td>\n",
        "      <td>P569</td>\n",
        "      <td>Date of birth</td>\n",
+       "      <td>DOB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -313,6 +318,7 @@
        "      <td>external</td>\n",
        "      <td>P27</td>\n",
        "      <td>Nationality of SEMBU team member</td>\n",
+       "      <td>Citizenship</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -326,15 +332,15 @@
        "3    Birthdate  external-id  external         P569   \n",
        "4  Nationality  external-id  external          P27   \n",
        "\n",
-       "                                  description  \n",
-       "0   Unique identifier for a SEMBU team member  \n",
-       "1  First name/given name of SEMBU team member  \n",
-       "2    Surname/Family name of SEMBU team member  \n",
-       "3                               Date of birth  \n",
-       "4            Nationality of SEMBU team member  "
+       "                                  description        alias  \n",
+       "0   Unique identifier for a SEMBU team member           ID  \n",
+       "1  First name/given name of SEMBU team member   First name  \n",
+       "2    Surname/Family name of SEMBU team member    Last name  \n",
+       "3                               Date of birth          DOB  \n",
+       "4            Nationality of SEMBU team member  Citizenship  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "id": "11611bbd",
    "metadata": {},
    "outputs": [],
@@ -357,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "id": "bcae7e4e",
    "metadata": {},
    "outputs": [
@@ -368,10 +374,11 @@
        " 'data_type': 'string',\n",
        " 'type': 'internal',\n",
        " 'mapping_code': nan,\n",
-       " 'description': 'Unique identifier for a SEMBU team member'}"
+       " 'description': 'Unique identifier for a SEMBU team member',\n",
+       " 'alias': 'ID'}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -391,9 +398,9 @@
      "output_type": "stream",
      "text": [
       "Column 'Id' is internal.\n",
-      "P15\n",
+      "P17\n",
       "Column 'Category' is internal.\n",
-      "P16\n"
+      "P18\n"
      ]
     }
    ],
@@ -414,7 +421,7 @@
     "            p = wbi.property.new(datatype=__data_type)\n",
     "            p.labels.set('en', __col_name)\n",
     "            p.descriptions.set('en', __description)\n",
-    "            p.descriptions.set('en', __description)\n",
+    "            p.aliases.set('en', __alias)\n",
     "\n",
     "            res = p.write()\n",
     "\n",
