Work in progress

--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -427,7 +427,8 @@
     "\n",
     "            ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
     "            if len(ident) == 1:\n",
-    "                print(ident[0].split(\"'\")[1])\n",
+    "                prop_code = ident[0].split(\"'\")[1]\n",
+    "                print(\"Column '{}' is mapped to '{}'\".format(__col_name, prop_code))\n",
     "            else:\n",
     "                raise Exception(\"Surprise, this method didn't work.\")\n",
     "        \n",
