--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -434,7 +434,9 @@
     "        \n",
     "        except ModificationFailed as e:\n",
     "            print(\"Property '{}' already exists\".format(__col_name))\n",
-    "            continue"
+    "            continue\n",
+    "    else:\n",
+    "        "
    ]
   },
   {
