--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "id": "640b25ac",
    "metadata": {},
    "outputs": [
@@ -397,10 +397,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Column 'Id' is internal.\n",
-      "P17\n",
-      "Column 'Category' is internal.\n",
-      "P18\n"
+      "Column 'Id' is mapped to 'P19'\n",
+      "Column 'Name' is mapped to 'P20'\n",
+      "Column 'Family Name' is mapped to 'P21'\n",
+      "Column 'Birthdate' is mapped to 'P22'\n",
+      "Column 'Nationality' is mapped to 'P23'\n",
+      "Column 'Category' is mapped to 'P24'\n",
+      "Column 'Start date' is mapped to 'P25'\n",
+      "Column 'End date' is mapped to 'P26'\n"
      ]
     }
    ],
@@ -413,30 +417,25 @@
     "    __description = item['description']\n",
     "    __alias = item['alias']\n",
     "\n",
-    "    if __type == 'internal':\n",
-    "        print(\"Column '{}' is internal.\".format(__col_name))\n",
+    "    try:\n",
     "\n",
-    "        try:\n",
+    "        p = wbi.property.new(datatype=__data_type)\n",
+    "        p.labels.set('en', __col_name)\n",
+    "        p.descriptions.set('en', __description)\n",
+    "        p.aliases.set('en', __alias)\n",
     "\n",
-    "            p = wbi.property.new(datatype=__data_type)\n",
-    "            p.labels.set('en', __col_name)\n",
-    "            p.descriptions.set('en', __description)\n",
-    "            p.aliases.set('en', __alias)\n",
+    "        res = p.write()\n",
     "\n",
-    "            res = p.write()\n",
-    "\n",
-    "            ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
-    "            if len(ident) == 1:\n",
-    "                prop_code = ident[0].split(\"'\")[1]\n",
-    "                print(\"Column '{}' is mapped to '{}'\".format(__col_name, prop_code))\n",
-    "            else:\n",
-    "                raise Exception(\"Surprise, this method didn't work.\")\n",
-    "        \n",
-    "        except ModificationFailed as e:\n",
-    "            print(\"Property '{}' already exists\".format(__col_name))\n",
-    "            continue\n",
-    "    else:\n",
-    "        "
+    "        ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
+    "        if len(ident) == 1:\n",
+    "            prop_code = ident[0].split(\"'\")[1]\n",
+    "            print(\"Column '{}' is mapped to '{}'\".format(__col_name, prop_code))\n",
+    "        else:\n",
+    "            raise Exception(\"Surprise, this method didn't work.\")\n",
+    "    \n",
+    "    except ModificationFailed as e:\n",
+    "        print(\"Property '{}' already exists\".format(__col_name))\n",
+    "        continue"
    ]
   },
   {
