--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -241,6 +241,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "26ac174f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_mapping(file):\n",
+    "    # Read .csv file to create mappings\n",
+    "    team_mapping = join(file_name)\n",
+    "    map_df = pd.read_csv(team_mapping)\n",
+    "    map_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 59,
    "id": "f06af458",
    "metadata": {},
