--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -246,11 +246,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_mapping(file):\n",
+    "def create_mapping(file_name):\n",
     "    # Read .csv file to create mappings\n",
-    "    team_mapping = join(file_name)\n",
-    "    map_df = pd.read_csv(team_mapping)\n",
-    "    map_df.head()"
+    "    __df = pd.read_csv(join(file_name))\n",
+    "    \n",
+    "    "
    ]
   },
   {
