--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -250,6 +250,8 @@
     "    # Read .csv file to create mappings\n",
     "    __df = pd.read_csv(join(file_name))\n",
     "    \n",
+    "    if __df.empty: return\n",
+    "\n",
     "    "
    ]
   },
