--- a/notebooks/insert_data.ipynb
+++ b/notebooks/insert_data.ipynb
@@ -252,7 +252,35 @@
     "    \n",
     "    if __df.empty: return\n",
     "\n",
-    "    "
+    "    columns_with_mappings = list(__df.T.to_dict().values())\n",
+    "\n",
+    "    for item in columns_with_mappings:\n",
+    "        __col_name = item['column']\n",
+    "        __data_type = item['data_type']\n",
+    "        __type = item['type']\n",
+    "        __mapping_code = item['mapping_code']\n",
+    "        __description = item['description']\n",
+    "        __alias = item['alias']\n",
+    "\n",
+    "        try:\n",
+    "\n",
+    "            p = wbi.property.new(datatype=__data_type)\n",
+    "            p.labels.set('en', __col_name)\n",
+    "            p.descriptions.set('en', __description)\n",
+    "            p.aliases.set('en', __alias)\n",
+    "\n",
+    "            res = p.write()\n",
+    "\n",
+    "            ident = [x for x in str(res).split('\\n') if \"_id='P\" in x]\n",
+    "            if len(ident) == 1:\n",
+    "                prop_code = ident[0].split(\"'\")[1]\n",
+    "                print(\"Column '{}' is mapped to '{}'\".format(__col_name, prop_code))\n",
+    "            else:\n",
+    "                raise Exception(\"Surprise, this method didn't work.\")\n",
+    "        \n",
+    "        except ModificationFailed as e:\n",
+    "            print(\"Property '{}' already exists\".format(__col_name))\n",
+    "            continue"
    ]
   },
   {
